src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-dhP0.5-b-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    default-column-width { proportion 0.25; }\n    default-window-height { proportion 0.5; }\n    border { on; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1256 × 696, bounds: 800 × 600, states: []

post-map configures:
size: 1256 × 696, bounds: 1256 × 696, states: [Activated]
